--- a/HouWei.html
+++ b/HouWei.html
@@ -217,7 +217,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <label for="select-0328" class="u-label">Dropdown</label>
               <div class="u-form-select-wrapper">
                 <select id="select-0328" name="select" class="u-input u-input-rectangle u-text-grey-70">
-                  <option value="Shshi" data-calc="">Shshi</option>
+                  <option value="Sushi" data-calc="">Sushi</option>
                   <option value="Hotpot" data-calc="">Hotpot</option>
                   <option value="​A LA CARTE" data-calc=""> A LA CARTE</option>
                 </select>
