--- a/Page-1.html
+++ b/Page-1.html
@@ -107,8 +107,8 @@
               <div class="u-size-20">
                 <div class="u-layout-row">
                   <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-3">
-                    <div class="u-container-layout u-container-layout-3">
-                      <p class="u-text u-text-3"> Herkullinen sushi- ja lämminruokabuffet on täydellinen tapa herkutella. Nyt kaikki herkut ovat saatavilla myös irtomyynnistä ja take awayna, joten voit poimia juuri ne annokset, jotka mielesi tekee.&nbsp;<br>Lämminruoka maksaa: 19,90 €/kg&nbsp;<br>sushit 22,90 ​€/kg<br>
+                    <div class="u-container-layout u-valign-top u-container-layout-3">
+                      <p class="u-text u-text-3"> Herkullinen sushi- ja lämminruokabuffet on täydellinen tapa herkutella. Nyt kaikki herkut ovat saatavilla myös irtomyynnistä ja take awayna, joten voit poimia juuri ne annokset, jotka mielesi tekee.&nbsp;<br>Lämmin ruoka: 13,50€ <br>Sushit: 0,80€/kpl<br>
                         <br>Jos sinulla on ruoka-aineallergioita, kerrothan siitä meille. Autamme mielellämme löytämään sinulle sopivat vaihtoehdot.<br>
                       </p>
                     </div>
@@ -207,7 +207,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <label for="select-0328" class="u-label">Dropdown</label>
               <div class="u-form-select-wrapper">
                 <select id="select-0328" name="select" class="u-input u-input-rectangle u-text-grey-70">
-                  <option value="Shshi" data-calc="">Shshi</option>
+                  <option value="Sushi" data-calc="">Sushi</option>
                   <option value="Hotpot" data-calc="">Hotpot</option>
                   <option value="​A LA CARTE" data-calc=""> A LA CARTE</option>
                 </select>
