--- a/Page-2.html
+++ b/Page-2.html
@@ -85,7 +85,7 @@
                 <div class="u-layout-row">
                   <div class="u-align-left u-container-style u-layout-cell u-size-40 u-layout-cell-1">
                     <div class="u-container-layout u-container-layout-1">
-                      <h2 class="u-text u-text-default u-text-1"> Hot potissa on tarjolla monipuolisesti raaka-aineita jokaiseen makuun</h2>
+                      <h2 class="u-text u-text-1"> Hot potissa on tarjolla monipuolisesti raaka-aineita jokaiseen makuun</h2>
                       <ul class="u-text u-text-default u-text-2">
                         <li>ORIGINAL
   KIMCHI&nbsp;</li>
@@ -227,7 +227,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <label for="select-0328" class="u-label">Dropdown</label>
               <div class="u-form-select-wrapper">
                 <select id="select-0328" name="select" class="u-input u-input-rectangle u-text-grey-70">
-                  <option value="Shshi" data-calc="">Shshi</option>
+                  <option value="Sushi" data-calc="">Sushi</option>
                   <option value="Hotpot" data-calc="">Hotpot</option>
                   <option value="​A LA CARTE" data-calc=""> A LA CARTE</option>
                 </select>
