--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html" style="padding: 18px 30px;">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Page-1.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-file-link u-grey-80 u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Page-2.html">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Sushi.html">Sushi Buffet</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html#sec-9e34" style="padding: 18px 30px;">Varaus</a>
@@ -56,9 +56,9 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-file-link u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-2.html">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sushi.html">Sushi Buffet</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html#sec-9e34">Varaus</a>
@@ -105,21 +105,21 @@
         <h2 class="u-align-center u-text u-text-default u-text-1"> Valikko</h2>
         <div class="u-align-center u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-file-link u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-1" data-image-width="1200" data-image-height="675" data-href="files/houwei.hinta.pdf" data-target="_blank">
+            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-1" data-image-width="1200" data-image-height="675" data-href="Sushi.html">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-1">
                 <h6 class="u-align-center u-text u-text-default u-text-2">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-1" href="files/houwei.hinta.pdf" target="_blank">SuSHI Buffet</a>
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-file-link u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-2" data-image-width="1200" data-image-height="675" data-href="files/ALACARTE.pdf" data-target="_blank">
+            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-2" data-image-width="1200" data-image-height="675">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-2">
                 <h6 class="u-align-center u-text u-text-default u-text-3">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-2" href="files/ALACARTE.pdf" target="_blank"> A LA CARTE</a>
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-file-link u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-3" data-image-width="1024" data-image-height="1024" data-href="files/hotpot.pdf" data-target="_blank">
+            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-3" data-image-width="1024" data-image-height="1024" data-href="Hotpot.html">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-3">
                 <h6 class="u-align-center u-text u-text-default u-text-4">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-3" href="files/hotpot.pdf" target="_blank">Hotpot</a>
