--- a/Sushi.html
+++ b/Sushi.html
@@ -187,7 +187,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-4" id="sec-f933">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-default u-text-1"> Varaus</h2>
         <div class="u-align-center u-form u-form-1">
           <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 20px;" source="email" name="form-1">
@@ -197,7 +197,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </div>
             <div class="u-form-group u-form-phone u-label-none">
               <label for="email-3b9a" class="u-label">Email</label>
-              <input type="tel" placeholder="Enter your phone number" id="email-3b9a" name="phone" class="u-input u-input-rectangle u-text-grey-70" required="required" pattern="\+?\d{0,3}[\s\(\-]?([0-9]{2,3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})">
+              <input type="tel" placeholder="Enter your phone number" id="email-3b9a" name="phone" class="u-input u-input-rectangle u-text-grey-70" required="required" pattern="\+?\d{0,2}[\s\(\-]?([0-9]{3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})">
             </div>
             <div class="u-form-email u-form-group u-label-none u-form-group-3">
               <label for="email-12e0" class="u-label">Email</label>
