--- a/HouWei.html
+++ b/HouWei.html
@@ -211,7 +211,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </div>
             <div class="u-form-email u-form-group u-label-none u-form-group-3">
               <label for="email-12e0" class="u-label">Email</label>
-              <input type="email" placeholder="Enter a valid email address" id="email-12e0" name="email" class="u-input u-input-rectangle u-text-grey-70" required="">
+              <input type="email" placeholder="Enter a valid email address" id="email-12e0" name="email" class="u-input u-input-rectangle u-text-grey-70">
             </div>
             <div class="u-form-group u-form-select u-label-none u-form-group-4">
               <label for="select-0328" class="u-label">Dropdown</label>
