--- a/Hotpot.html
+++ b/Hotpot.html
@@ -41,7 +41,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html" style="padding: 18px 30px;">Koti</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Sushi.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-file-link u-grey-80 u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
@@ -55,7 +55,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html">Koti</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sushi.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-file-link u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
@@ -123,19 +123,13 @@
                       <h2 class="u-text u-text-default u-text-4"> SOUP FLAVORS</h2>
                       <h2 class="u-text u-text-default u-text-5"> SOUP FLAVORS</h2>
                       <h2 class="u-text u-text-default u-text-6"> DIPPI</h2>
-                      <ul class="u-text u-text-default u-text-7">
-                        <li> Spicy SiChuan chili soup (spicy flavor)</li>
-                        <li>Mushroom soup (mushroom flavor)</li>
-                        <li>Thai Tom Yum soup (sour flavor)&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                      </ul>
-                      <ul class="u-align-left-xs u-dnd-started u-res-move-started u-text u-text-default u-text-8">
-                        <li> Spicy SiChuan chili soup (spicy flavor)</li>
-                        <li>Mushroom soup (mushroom flavor)</li>
-                        <li>Thai Tom Yum soup (sour flavor)&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                      </ul>
-                      <ul class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-9">
+                      <ul class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-7">
                         <li> Classic spicy dipping</li>
                         <li> Sweet and sour dipping&nbsp; &nbsp; &nbsp;</li>
+                      </ul>
+                      <ul class="u-text u-text-default u-text-8">
+                        <li> Spicy SiChuan chili soup (spicy flavor)<br>Mushroom soup (mushroom flavor)<br>Thai Tom Yum soup (sour flavor)&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                        </li>
                       </ul>
                     </div>
                   </div>
