--- a/HouWei.html
+++ b/HouWei.html
@@ -43,7 +43,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html" style="padding: 18px 30px;">Koti</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Sushi.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-file-link u-grey-80 u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
@@ -57,7 +57,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html">Koti</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sushi.html">Sushi Buffet</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link">A LA CARTE</a>
+</li><li class="u-nav-item"><a class="u-button-style u-file-link u-nav-link" href="files/ALACARTE.pdf" target="_blank">A LA CARTE</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
@@ -112,7 +112,7 @@
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-2" data-image-width="1200" data-image-height="675">
+            <div class="u-container-style u-file-link u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-2" data-image-width="1200" data-image-height="675" data-href="files/ALACARTE.pdf" data-target="_blank">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-2">
                 <h6 class="u-align-center u-text u-text-default u-text-3">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-2" href="files/ALACARTE.pdf" target="_blank"> A LA CARTE</a>
