--- a/HouWei.html
+++ b/HouWei.html
@@ -43,28 +43,28 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="#">Sushi Buffet</a>
+            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html" style="padding: 18px 30px;">Koti</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Sushi.html">Sushi Buffet</a>
 </li><li class="u-nav-item"><a class="u-button-style u-file-link u-grey-80 u-nav-link" href="files/ALACARTE-1.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="#">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Varaus</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Yhteystiedot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html#sec-cfbc" style="padding: 18px 30px;">Varaus</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="Hotpot.html#sec-aa9f" style="padding: 18px 30px;">Yhteystiedot</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Sushi Buffet</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html">Koti</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sushi.html">Sushi Buffet</a>
 </li><li class="u-nav-item"><a class="u-button-style u-file-link u-nav-link" href="files/ALACARTE-1.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Varaus</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Yhteystiedot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html#sec-cfbc">Varaus</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html#sec-aa9f">Yhteystiedot</a>
 </li></ul>
               </div>
             </div>
@@ -107,7 +107,7 @@
         <h2 class="u-align-center u-text u-text-default u-text-1"> Valikko</h2>
         <div class="u-align-center u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-1" data-image-width="1200" data-image-height="675" data-href="#">
+            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-1" data-image-width="1200" data-image-height="675" data-href="Sushi.html">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-1">
                 <h6 class="u-align-center u-text u-text-default u-text-2">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-1" href="files/houwei.hinta.pdf" target="_blank">SuSHI Buffet</a>
@@ -121,7 +121,7 @@
                 </h6>
               </div>
             </div>
-            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-3" data-image-width="1024" data-image-height="1024" data-href="#">
+            <div class="u-container-style u-image u-image-round u-list-item u-radius-50 u-repeater-item u-shading u-image-3" data-image-width="1024" data-image-height="1024" data-href="Hotpot.html">
               <div class="u-container-layout u-similar-container u-valign-middle-xs u-container-layout-3">
                 <h6 class="u-align-center u-text u-text-default u-text-4">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-body-alt-color u-btn-3" href="files/hotpot.pdf" target="_blank">Hotpot</a>
@@ -237,7 +237,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
             <input type="hidden" value="" name="recaptchaResponse">
-            <input type="hidden" name="formServices" value="">
+            <input type="hidden" name="formServices" value="cc6a7e15-81f3-d501-3434-ea4eac4e9f22">
           </form>
         </div>
       </div>
