--- a/Sushi.html
+++ b/Sushi.html
@@ -39,28 +39,28 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="#">Sushi Buffet</a>
+            <ul class="u-custom-font u-font-montserrat u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html" style="padding: 18px 30px;">Koti</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Sushi.html">Sushi Buffet</a>
 </li><li class="u-nav-item"><a class="u-button-style u-file-link u-grey-80 u-nav-link" href="files/ALACARTE-1.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="#">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-80 u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Varaus</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="#" style="padding: 18px 30px;">Yhteystiedot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="HouWei.html#sec-cfbc" style="padding: 18px 30px;">Varaus</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-3-base u-text-hover-palette-3-light-2" href="Hotpot.html#sec-aa9f" style="padding: 18px 30px;">Yhteystiedot</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Koti</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Sushi Buffet</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html">Koti</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Valikko</a><div class="u-nav-popup"><ul class="u-border-2 u-border-palette-1-light-3 u-h-spacing-20 u-nav u-unstyled u-v-spacing-10"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sushi.html">Sushi Buffet</a>
 </li><li class="u-nav-item"><a class="u-button-style u-file-link u-nav-link" href="files/ALACARTE-1.pdf" target="_blank">A LA CARTE</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Hotpot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html">Hotpot</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Varaus</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Yhteystiedot</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="HouWei.html#sec-cfbc">Varaus</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Hotpot.html#sec-aa9f">Yhteystiedot</a>
 </li></ul>
               </div>
             </div>
