--- a/Sushi.html
+++ b/Sushi.html
@@ -95,9 +95,9 @@
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-31 u-layout-cell-2">
-                    <div class="u-container-layout u-valign-top u-container-layout-2">
+                    <div class="u-container-layout u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-2">
                       <img class="custom-expanded u-absolute-hcenter-lg u-absolute-hcenter-md u-image u-image-contain u-image-default u-image-1" src="images/price_sushi.png" alt="" data-image-width="3642" data-image-height="1651">
-                      <img class="u-image u-image-contain u-image-default u-image-2" src="images/children_price.png" alt="" data-image-width="2461" data-image-height="1145">
+                      <img class="u-image u-image-contain u-image-default u-image-2" src="images/price_kids-1.png" alt="" data-image-width="2461" data-image-height="1398">
                     </div>
                   </div>
                 </div>
