--- a/Sushi.html
+++ b/Sushi.html
@@ -74,7 +74,7 @@
       </div>
     </section>
     <section class="u-clearfix u-color-scheme-u10 u-grey-80 u-section-2" id="sec-b578">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-col">
@@ -95,8 +95,8 @@
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-31 u-layout-cell-2">
-                    <div class="u-container-layout u-valign-bottom-xl u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-2">
-                      <img class="custom-expanded u-absolute-hcenter-lg u-absolute-hcenter-md u-image u-image-contain u-image-default u-image-1" src="images/price_sushi.png" alt="" data-image-width="3642" data-image-height="1651">
+                    <div class="u-container-layout u-container-layout-2">
+                      <img class="u-image u-image-contain u-image-default u-image-1" src="images/price_sushi.png" alt="" data-image-width="3642" data-image-height="1651">
                       <img class="u-image u-image-contain u-image-default u-image-2" src="images/price_kids-1.png" alt="" data-image-width="2461" data-image-height="1398">
                     </div>
                   </div>
